# MyFEM

./: .gitattributes  .gitignore  CMakeLists.txt  README  中期实现.txt  初步实现.txt
.github/workflows/: cmake.yml
QtFEM/: QtFEM.pro
QtFEM/Main/: AboutDialog.cpp  AboutDialog.ui  ChooseElementTypeDialog.cpp  ChooseElementTypeDialog.h  ChooseElementTypeDialog.ui  Main.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtFEM/QtFEMLibrary/: QtFEMLibrary.pro
QtFEM/QtFEMLibrary/element/: element.h  element.pro  element_global.h
QtFEM/QtFEMLibrary/load/: load.h  load.pro  load_global.h
QtFEM/QtFEMLibrary/node/: node.h  node.pro  node_global.h
demo/cb_test/: cb_test.cpp
demo/matrix_test/: matrix_test.cpp
demo/pre_test/: pre_test.cpp
include/: base.h  cb.h  common.h  dynlist.h  element.cpp  element.h  error.h  load.cpp  load.h  load_test.cpp  matrix.h  point.h  post.h  pre.h  solve.h
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  common.cpp  dynlist.cpp  element.cpp  load.cpp  main  main.cpp  matrix.cpp  point.cpp  pre.cpp  pre2.cpp
